# lenia-rust

./: Cargo.toml  README.md
data/: correlations.toml  data.toml
data/save0/: toml.toml
data/toml/: 0.toml  1.toml  2.toml  9T8ZBy0cRY6zxuYIEctIMQ.toml  NfrYeFO2QGSVxqVwysA5bQ.toml  klMB8IE5RCO2SFlW5NHQdA.toml
src/: eco.rs  lenia.rs  logger.rs  main.rs  ui.rs  utils.rs
