[package]
name = "game_of_life_ge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "^1.8"
# rand = "^0.8"
ndarray = { version = "^0.15", features = ["rayon", "serde"]}
ndarray-conv = "^0.2"
ndarray-ndimage = "^0.4"
fftconvolve = "^0.1"
macroquad = "^0.4"
bincode = "^1.3"
serde = { version = "^1.0", features = ["derive"] }
toml = "^0.8"
